# rust_todo

backend/: .gitignore  Cargo.toml  database.sqlite
backend/migrations/: 20250603182520_todos.sql
backend/src/: main.rs
